--- a/config_file_example.cfg
+++ b/config_file_example.cfg
@@ -1,3 +1,3 @@
 [links]
-link1 = www.youtube.com/.......
-link2 = www.youtube.com/.......
+link1 = https//www.youtube.com/.......
+link2 = https://www.youtube.com/.......
